# webs-challenger

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/yahoo_finance_crawler/: crawler.py  main.py  writer.py
tests/: test_crawler.py
yahoo-crawler/: yahoo_finance_crawler.pth
yahoo-crawler/build-1.4.0.dist-info/: RECORD
yahoo-crawler/charset_normalizer-3.4.6.dist-info/: RECORD
yahoo-crawler/podman-5.7.0.dist-info/: METADATA  RECORD
yahoo-crawler/websocket_client-1.9.0.dist-info/: RECORD
yahoo-crawler/yahoo_finance_crawler-0.1.0.dist-info/: METADATA  RECORD  direct_url.json  entry_points.txt
