[project]
name = "yahoo-finance-crawler"
version = "0.1.0"
description = "Crawler para Yahoo Finance usando Selenium e BeautifulSoup"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "selenium>=4.18.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
yahoo-crawler = "yahoo_finance_crawler.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poetry]
packages = [{include = "yahoo_finance_crawler", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
